k8s/apps/cloud/kromgo.yaml
# kromgo-> prom
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kromgo
spec:
  podSelector:
    matchLabels:
      app: kromgo
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          app.kubernetes.io/name: prometheus
