k8s/apps/cloud/shields-io.yaml
# allow only access to kromgo
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-shields-to-kromgo
spec:
  podSelector:
    matchLabels:
      app: shields
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          app: kromgo
